<resources>

    <string name="app_name">eduminication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="question">提问</string>
    <string name="answer">回答</string>
    <string name="data_structure">数据结构</string>
    <string name="principles_of_compiler">编译原理</string>
    <string name="linear_algebra">线性代数</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_home">主页</string>
    <string name="menu_resource">教学资源</string>
    <string name="menu_notification">通知</string>
    <string name="menu_message">私信</string>
    <string name="menu_setting">设置</string>
    <string name="vice_menu">通用</string>
    <string name="user">用户</string>
    <string name="communicate">Communicate</string>
    <string name="message">message</string>
    <string name="avatar">avatar</string>
    <string name="resource">课件</string>
    <string name="resource1">课件1</string>
    <string name="resource2">课件2</string>
    <string name="resource3">课件3</string>
    <string name="resource4">课件4</string>
    <string name="resource5">课件5</string>
    <string name="note">笔记</string>
    <string name="question_and_answer">问答</string>
    <string name="file_select_button">选择文件</string>
    <string name="upload_button">上传</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">登录</string>
    <string name="personalized_background">个人背景</string>
    <string name="student">学生</string>
    <string name="teacher">老师</string>
    <string name="register">注册</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="file_description">文件简介</string>
    <string name="file_name">文件名</string>
    <string name="choose_file">选择文件</string>
    <string name="file_upload">上传</string>
</resources>
