<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_resource"
            android:title="@string/menu_resource" />
        <item
            android:id="@+id/nav_notification"
            android:title="@string/menu_notification" />
        <item
            android:id="@+id/nav_message"
            android:title="@string/menu_message" />
    </group>

    <item android:title="@string/vice_menu">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:title="@string/menu_setting" />
        </menu>
    </item>

</menu>
