<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/global_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.eduminication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_resource"
        android:name="com.eduminication.ui.courseResource.ResourceFragment"
        android:label="@string/menu_resource"
        tools:layout="@layout/fragment_resource">
        <action
            android:id="@+id/action_nav_resource_to_data"
            app:destination="@id/nav_data" />
    </fragment>

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.eduminication.ui.notification.notificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.eduminication.ui.chat.ChatFragment"
        android:label="@string/menu_message"
        tools:layout="@layout/fragment_chat">

        <argument
            android:name="user"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.eduminication.ui.setting.settingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_data"
        android:name="com.eduminication.ui.data.DataFragment"
        android:label="@string/resource"
        tools:layout="@layout/fragment_data">
        <argument
            android:name="url"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_data_to_QAFragment"
            app:destination="@id/QAFragment" />
    </fragment>

    <action
        android:id="@+id/action_global_nav_chat"
        app:destination="@id/nav_chat"
        app:popUpTo="@id/global_navigation"
        app:popUpToInclusive="true" />

    <fragment
        android:id="@+id/QAFragment"
        android:name="com.eduminication.ui.data.QAFragment"
        android:label="@string/question_and_answer"
        tools:layout="@layout/fragment_qa" />
    <fragment
        android:id="@+id/questionFragment"
        android:name="com.eduminication.ui.data.QuestionFragment"
        android:label="fragment_question"
        tools:layout="@layout/fragment_question" />
    <fragment
        android:id="@+id/answerFragment"
        android:name="com.eduminication.ui.data.AnswerFragment"
        android:label="fragment_answer"
        tools:layout="@layout/fragment_answer" />

</navigation>
