<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="192dp">

        <ImageView
            android:id="@+id/personalized_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_secondary"
            android:contentDescription="@string/personalized_background"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/default_avatar3"
            android:contentDescription="@string/avatar"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="20dp"
            android:text="@string/user"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp" />
    </FrameLayout>
</layout>
