<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/data_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:fab_colorNormal="@color/color_secondary"
            app:fab_colorPressed="@color/color_secondary_variant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:menu_backgroundColor="@color/color_surface"
            app:menu_icon="@drawable/ic_menu_manage"
            app:menu_labels_ellipsize="end"
            app:menu_labels_singleLine="true">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_manage"
                app:fab_colorNormal="@color/color_secondary"
                app:fab_colorPressed="@color/color_secondary_variant"
                app:fab_label="@string/question"
                app:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_manage"
                app:fab_colorNormal="@color/color_secondary"
                app:fab_colorPressed="@color/color_secondary_variant"
                app:fab_label="@string/answer"
                app:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_manage"
                app:fab_colorNormal="@color/color_secondary"
                app:fab_colorPressed="@color/color_secondary_variant"
                app:fab_label="@string/note"
                app:fab_size="mini" />
        </com.github.clans.fab.FloatingActionMenu>

        <com.eduminication.utils.TBSView
            android:id="@+id/tbs_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
